class on p and heading practice

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
     <head>
         <title>Week 5 Index</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
     <body>
-        
+        <h1 class="heads">Capitals</h1>
+        <h2 class="heads">London</h2>
+        <p>London is capital of England.</p>
+        <h2 class="heads">Paris</h2>
+        <p class="p-background">Paris is capital of France.</p>
     </body>
 </html>
