--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
     <body>
-        <h1 class="heads">Capitals</h1>
-        <h2 class="heads">London</h2>
+        <h1 class="headings">Capitals</h1>
+        <h2 class="headings" id="london-head">London</h2>
         <p>London is capital of England.</p>
-        <h2 class="heads">Paris</h2>
-        <p class="p-background">Paris is capital of France.</p>
+        <h2 class="headings">Paris</h2>
+        <p class="paris-paragraph">Paris is capital of France.</p>
     </body>
 </html>
