--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
         <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
     <body>
-        <h1 class="headings">Capitals</h1>
+        <h1 id="page-top">Capitals</h1>
+        <a href="#ottowa">
+            <p>Jump to Ottawa</p>
+        </a>
+
+        <h2>London</h2>
+        <p>London is capital of England.</p>
+        <h2>Paris</h2>
+        <p>Paris is capital of France.</p>
+        <h2>Rome</h2>
+        <p>Rome is capital of Italy.</p>
+        <h2>Madrid</h2>
+        <p> Madrid is capital of Spain.</p>
+        <h2 id="ottowa">Ottawa</h2>
+        <p> Ottawa is capital of Canada.</p>
+
+        <a href="#page-top">
+            <p>Go to the top</p>
+        </a>
+
+
+        <!-- <h1 class="headings">Capitals</h1>
         <h2 class="headings" id="london-head">London</h2>
         <p>London is capital of England.</p>
         <h2 class="headings">Paris</h2>
-        <p class="paris-paragraph">Paris is capital of France.</p>
+        <p class="paris-paragraph">Paris is capital of France.</p> -->
     </body>
 </html>
