box model practice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
     <body>
-        <h1 id="page-top">Capitals</h1>
+        <p>
+            The typical filler text is the <span>Lorem Ipsum</span>.
+        </p>
+
+
+        <!-- <h1 id="page-top">Capitals</h1>
         <a href="#ottowa">
             <p>Jump to Ottawa</p>
         </a>
@@ -24,7 +29,7 @@
 
         <a href="#page-top">
             <p>Go to the top</p>
-        </a>
+        </a> -->
 
 
         <!-- <h1 class="headings">Capitals</h1>
