--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
     <body>
+        <h1>My Heading</h1>
         <p>
             The typical filler text is the <span>Lorem Ipsum</span>.
         </p>
